--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">CRitter</string>
-    <string name="login_label">Log in to Twitter</string>
+    <string name="login_label">Log in using Twitter</string>
     <string name="title_activity_timeline">Home Timeline</string>
+    <string name="cancel">Cancel</string>
+    <string name="post">Post</string>
+    <string name="your_tweet_goes_here">Your tweet goes here</string>
+    <string name="profile_picture">Profile picture</string>
+    <string name="welcome">Welcome to CRitter!</string>
 </resources>
